WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224399
webaudio/AudioListener/audiolistener-set-position.html is leaking PannerNodes
https://bugs.webkit.org/show_bug.cgi?id=224399
Summary
webaudio/AudioListener/audiolistener-set-position.html is leaking PannerNodes
Chris Dumez
Reported
2021-04-09 16:30:07 PDT
webaudio/AudioListener/audiolistener-set-position.html is leaking PannerNodes (and thus OfflineAudioContexts).
Attachments
Patch
(18.60 KB, patch)
2021-04-12 11:57 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(19.11 KB, patch)
2021-04-12 12:31 PDT
,
Chris Dumez
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-04-12 11:36:33 PDT
***
Bug 224439
has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 2
2021-04-12 11:57:58 PDT
Created
attachment 425771
[details]
Patch
Chris Dumez
Comment 3
2021-04-12 12:31:34 PDT
Created
attachment 425774
[details]
Patch
Geoffrey Garen
Comment 4
2021-04-12 13:59:00 PDT
Comment on
attachment 425774
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=425774&action=review
r=me
> Source/WebCore/ChangeLog:33 > + Early return if lazyInitialize() gets called for au audiocontext is closed. Nothing prevents JS from
for au => after an
> Source/WebCore/Modules/webaudio/AudioScheduledSourceNode.cpp:184 > +bool AudioScheduledSourceNode::virtualHasPendingActivity() const
Not for this patch, but this function really needs a better to name to clarify that it is an addition, *not* an override. Maybe "hasAdditionalPendingActivity" or something like that.
Chris Dumez
Comment 5
2021-04-12 14:28:37 PDT
Committed
r275838
(
236406@main
): <
https://commits.webkit.org/236406@main
>
Radar WebKit Bug Importer
Comment 6
2021-04-12 14:29:31 PDT
<
rdar://problem/76558119
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug