Source/WebCore/Modules/webaudio/AudioScheduledSourceNode.h
@@ -58,8 +58,6 @@ public:
     ExceptionOr<void> startLater(double when);
     ExceptionOr<void> stopLater(double when);
 
-    void didBecomeMarkedForDeletion() override;
-
     unsigned short playbackState() const { return static_cast<unsigned short>(m_playbackState); }
     bool isPlayingOrScheduled() const { return m_playbackState == PLAYING_STATE || m_playbackState == SCHEDULED_STATE; }
     bool hasFinished() const { return m_playbackState == FINISHED_STATE; }
@@ -79,11 +77,13 @@ protected:
     // Called when we have no more sound to play or the noteOff() time has been reached.
     virtual void finish();
 
+    bool virtualHasPendingActivity() const final;
+    void eventListenersDidChange() final;
+
     bool requiresTailProcessing() const final { return false; }
 
     PlaybackState m_playbackState { UNSCHEDULED_STATE };
 
-    RefPtr<PendingActivity<AudioScheduledSourceNode>> m_pendingActivity;
     // m_startTime is the time to start playing based on the context's timeline (0 or a time less than the context's current time means "now").
     double m_startTime { 0 }; // in seconds
 
@@ -91,6 +91,7 @@ protected:
     // If it hasn't been set explicitly, then the sound will not stop playing (if looping) or will stop when the end of the AudioBuffer
     // has been reached.
     Optional<double> m_endTime; // in seconds
+    bool m_hasEndedEventListener { false };
 };
 
 } // namespace WebCore
